--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,9 +21,7 @@ padding-bottom: 100px;
 
 /* Scrolling pages */
 
-a.active {
-    background-color: #ea454b;
-}
+
   
 #services {
     background-color: red;
@@ -53,6 +51,10 @@ a.active {
 
 .footer-copyright {
     background-color: #002F6C !important;
+}
+
+a.active {
+  background-color: #002F6C;
 }
 
 
