add links and photo to sidenav

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,13 @@ padding-top: 100px;
 padding-bottom: 100px;
 }
 
+.background {
+  height: 100px;
+}
 
+.side-links {
+  padding-top: 100px;
+}
 
 
 
