--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,11 +11,17 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
 }
 
-#logo-space {
+.logo-space {
   height: 175px;
+}
+
+#logo-foot {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 #contact-form {
@@ -38,6 +44,13 @@ h3, h5{
 }
 
 #collection-wrap {
+  width: 30%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto; 
+}
+
+#collection-wrapper {
   width: 30%;
   display: block;
   margin-left: auto;
