--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,3 +163,11 @@ textarea.active {
   color: white !important;
 }
 
+
+@media only screen and (max-width: 992px) {
+  #nav-mobile {
+    display: none;
+  } 
+}
+
+
