--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,19 +4,7 @@ body {
     font-size: 20px;
 }
 
-#logo {
-  width: 150px;
-  height: 150px;
-  padding-top: 20px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
 
-.logo-space {
-  height: 175px;
-  background-color: #F0AD4E;
-}
 
 #logo-foot {
   display: block;
@@ -118,7 +106,7 @@ h3, h5 {
 
 /* Change colors on navbar and footer to match client */
 
-#content {
+/* #content {
     background-color: #002F6C !important;
 }
 
@@ -132,7 +120,7 @@ h3, h5 {
 
 a.active {
   background-color: #002F6C;
-}
+} */
 
 
 /* Change colors on contact form to match client */
