--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,9 +2,9 @@ body {
     font-family: 'Montserrat', sans-serif;
     line-height: 1.6;
     font-size: 20px;
+    background-color: #212121;
+    color: #eeeeee;
 }
-
-
 
 #logo-foot {
   display: block;
@@ -16,6 +16,10 @@ body {
 #contact-form {
   padding-top: 70px;
   padding-bottom: 100px;
+}
+
+.text-color, nav ul li a{
+  color: #212121;
 }
 
 .background {
