--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,41 @@
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Raleway', sans-serif;
     line-height: 1.6;
-    font-size: 20px;
+    font-size: 22px;
     background-color: #212121;
     color: #eeeeee;
 }
 
-#logo-foot {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+#headline {
+  font-size: 90px;
+  text-align: center;
+  font-weight: bolder;
+  margin-top: 275px;
+  font-family: 'Cherry Cream Soda', cursive;
+  letter-spacing: 7px;
+}
+
+#drinks-pics {
+  padding-top: 30px;
+  padding-bottom: 400px;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  margin: 5px;
+}
+
+#drinks-1 {
+  height: 120px;
+}
+
+#drinks-2 {
+  height: 120px;
+  padding-left: 125px;
+  padding-right: 125px;
+}
+
+#drinks-3 {
+  height: 120px;
 }
 
 #contact-form {
@@ -18,7 +43,7 @@ body {
   padding-bottom: 100px;
 }
 
-.text-color, nav ul li a{
+.text-color, nav ul li a, .sidenav-trigger {
   color: #212121;
 }
 
@@ -30,10 +55,12 @@ body {
   padding-top: 100px;
 }
 
-h3, h5 {
+h3, h5, h6 {
   text-align: center;
   font-weight: bolder;
   padding-bottom: 30px;
+  font-family: 'Cherry Cream Soda', cursive;
+  letter-spacing: 3px;
 }
 
 #services-heading {
@@ -73,19 +100,18 @@ h3, h5 {
   margin-bottom: 10px;
 }
 
-
 /* Dessert section from API */
-#foodView {
+#cocktailView {
   text-align: center;
 }
-#foodView h3 {
+#cocktailView h3 {
   padding-top: 100px;
   text-align: center;
   font-weight: bolder;
   padding-bottom: 30px;
 }
 
-#foodView h6 {
+#cocktailView p {
   text-align:left;
   line-height: 1.6;
   font-size: 20px;
@@ -106,55 +132,6 @@ h3, h5 {
 #dessert {
     height: 100%;
 }
-
-
-/* Change colors on navbar and footer to match client */
-
-/* #content {
-    background-color: #002F6C !important;
-}
-
-.page-footer {
-    background-color: #F0AD4E !important;
-}
-
-.footer-copyright {
-    background-color: #002F6C !important;
-}
-
-a.active {
-  background-color: #002F6C;
-} */
-
-
-/* Change colors on contact form to match client */
- 
-input:focus {
-  border-bottom: 1px solid #F0AD4E !important;
-  box-shadow: 0 1px 0 0 #F0AD4E !important;
-}
-
-label.active {
-  color: #F0AD4E !important;
-} 
-
-textarea:focus {
-  border-bottom: 1px solid #F0AD4E !important;
-  box-shadow: 0 1px 0 0 #F0AD4E !important;
-}
-
-textarea.active {
-  color: #F0AD4E !important;
-} 
-
-
-/* Change colors on buttons to match client */
-
-.btn {
-  background-color: #002F6C !important;
-  color: white !important;
-}
-
 
 @media only screen and (max-width: 992px) {
   #nav-mobile {
