--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,8 +176,23 @@ h3, h4, h5, h6 {
 }
 
 #ingrView {
+  display: flex;
+  flex-wrap: wrap;
   font-size: 1.4vw;
   padding-top: 30px;
+}
+
+ol {
+  width: 50%;
+}
+
+ol:nth-child(odd) {
+  text-align: right;
+  padding-right:10px;
+}
+
+ol:nth-child(even) {
+  text-align: left;
 }
 
 /* Footer section */
