--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,4 +218,13 @@ ol:nth-child(even) {
   filter: invert(100%);
 }
 
+@media only screen and (max-width: 1164px) {
+  nav ul li a{
+    font-size: 25px;
+    padding: 0 20px 0 20px;
+  }
 
+  #arrow3 {
+    left: 80%;
+   }
+}
